// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/Menu > should build a menu and highlight current page 1`] = `
<nav
  class="_menu_29d207"
>
  <ul
    class="_list_29d207"
  >
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _active_daf4a6"
        href="/bar.html"
      >
        <span
          class="_text_daf4a6"
        >
          Bar
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/baz.html"
      >
        <span
          class="_text_daf4a6"
        >
          Baz
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/foo.html"
      >
        <span
          class="_text_daf4a6"
        >
          Foo
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`components/Menu > should build a two-levels menu and open all parents that contains current page 1`] = `
<nav
  class="_menu_29d207"
>
  <ul
    class="_list_29d207"
  >
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _parent_daf4a6"
        href="/bar.html"
      >
        <span
          class="_text_daf4a6"
        >
          <svg
            aria-expanded="true"
            class="_chevron_eafbf3 _toggle_daf4a6 _open_eafbf3"
            fill="none"
            height="16"
            role="button"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 13 11 8 6 3v9Z"
              fill="currentColor"
            />
          </svg>
          Bar
        </span>
      </a>
    </li>
    <li
      aria-level="2"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _active_daf4a6"
        href="/bar-install.html"
      >
        <span
          class="_text_daf4a6"
        >
          Bar: Install
        </span>
      </a>
    </li>
    <li
      aria-level="2"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _parent_daf4a6"
        href="/bar-features.html"
      >
        <span
          class="_text_daf4a6"
        >
          Bar: Features
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/baz.html"
      >
        <span
          class="_text_daf4a6"
        >
          Baz
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/foo.html"
      >
        <span
          class="_text_daf4a6"
        >
          Foo
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`components/Menu > should close a submenu when clicking on a chevron 1`] = `
<nav
  class="_menu_29d207"
>
  <ul
    class="_list_29d207"
  >
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _parent_daf4a6"
        href="/bar.html"
      >
        <span
          class="_text_daf4a6"
        >
          <svg
            aria-expanded="true"
            class="_chevron_eafbf3 _toggle_daf4a6 _open_eafbf3"
            fill="none"
            height="16"
            role="button"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 13 11 8 6 3v9Z"
              fill="currentColor"
            />
          </svg>
          Bar
        </span>
      </a>
    </li>
    <li
      aria-level="2"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _active_daf4a6"
        href="/bar-install.html"
      >
        <span
          class="_text_daf4a6"
        >
          Bar: Install
        </span>
      </a>
    </li>
    <li
      aria-level="2"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _parent_daf4a6"
        href="/bar-features.html"
      >
        <span
          class="_text_daf4a6"
        >
          Bar: Features
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/baz.html"
      >
        <span
          class="_text_daf4a6"
        >
          Baz
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/foo.html"
      >
        <span
          class="_text_daf4a6"
        >
          Foo
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`components/Menu > should close a submenu when clicking on a chevron 2`] = `
<nav
  class="_menu_29d207"
>
  <ul
    class="_list_29d207"
  >
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6 _parent_daf4a6"
        href="/bar.html"
      >
        <span
          class="_text_daf4a6"
        >
          <svg
            aria-expanded="false"
            class="_chevron_eafbf3 _toggle_daf4a6"
            fill="none"
            height="16"
            role="button"
            width="16"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M6 13 11 8 6 3v9Z"
              fill="currentColor"
            />
          </svg>
          Bar
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/baz.html"
      >
        <span
          class="_text_daf4a6"
        >
          Baz
        </span>
      </a>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <a
        class="_link_daf4a6"
        href="/foo.html"
      >
        <span
          class="_text_daf4a6"
        >
          Foo
        </span>
      </a>
    </li>
  </ul>
</nav>
`;

exports[`components/Menu > should render skeletons while TOC is loading 1`] = `
<nav
  class="_menu_29d207"
>
  <ul
    class="_list_29d207"
  >
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <span
        class="_link_daf4a6"
      >
        <span
          class="_text_daf4a6 _skeleton_daf4a6"
        >
          <span
            class="_skeleton_2cc9eb _loader_daf4a6"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="2"
      class="_item_daf4a6"
    >
      <span
        class="_link_daf4a6"
      >
        <span
          class="_text_daf4a6 _skeleton_daf4a6"
        >
          <span
            class="_skeleton_2cc9eb _loader_daf4a6"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="2"
      class="_item_daf4a6"
    >
      <span
        class="_link_daf4a6"
      >
        <span
          class="_text_daf4a6 _skeleton_daf4a6"
        >
          <span
            class="_skeleton_2cc9eb _loader_daf4a6"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <span
        class="_link_daf4a6"
      >
        <span
          class="_text_daf4a6 _skeleton_daf4a6"
        >
          <span
            class="_skeleton_2cc9eb _loader_daf4a6"
          />
        </span>
      </span>
    </li>
    <li
      aria-level="1"
      class="_item_daf4a6"
    >
      <span
        class="_link_daf4a6"
      >
        <span
          class="_text_daf4a6 _skeleton_daf4a6"
        >
          <span
            class="_skeleton_2cc9eb _loader_daf4a6"
          />
        </span>
      </span>
    </li>
  </ul>
</nav>
`;
